--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -2,7 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-	font-family: 'Inter';
-	src: local('Inter'), url('./Inter-Regular.ttf') format('ttf');
-	}
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
